<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".homeActivity">

    <Button
        android:onClick="save_share"
        android:id="@+id/save_share"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/demo_button"
        android:text="@string/mash"
        android:textColor="@color/black" />

    <VideoView
        android:layout_width="336dp"
        android:layout_height="286dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <Button
            android:layout_weight="1"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/demo_button"
            android:onClick="ShowPopup_music"
            android:text="@string/music"
            android:textColor="@color/black" />

        <Button
            android:layout_weight="1"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/demo_button"
            android:onClick="ShowPopup_calendar"
            android:text="@string/calendar"
            android:textColor="@color/black" />

        <Button
            android:layout_weight="1"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/demo_button"
            android:onClick="ShowPopup_order"
            android:text="@string/order"
            android:textColor="@color/black" />

        <Button
            android:layout_width="184dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/demo_button"
            android:onClick="upload_video"
            android:text="@string/upload_vedio"
            android:textColor="@color/black" />


    </LinearLayout>

</LinearLayout>