<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <VideoView
            android:layout_width="472dp"
            android:layout_height="323dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:layout_width="102dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="@drawable/demo_button"
                android:onClick="ShowPopup_order"
                android:text="@string/order"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/save_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/demo_button"
                android:onClick="save_share"
                android:text="@string/mash"
                android:textColor="@color/black" />

            <Button
                android:layout_width="102dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/demo_button"
                android:onClick="ShowPopup_music"
                android:text="@string/music"
                android:textColor="@color/black" />

            <Button
                android:layout_width="102dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/demo_button"
                android:onClick="ShowPopup_calendar"
                android:text="@string/calendar"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>