<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/color1"
    android:gravity="bottom"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/profile_image"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:layout_marginBottom="18dp"/>

    <Button
        android:id="@+id/nav_sign_in_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:padding="0dp"
        android:layout_marginStart="15dp"
        android:text="@string/nav_head_sign_in_sign_up"
        android:layout_marginBottom="14dp"
        android:background="@null"
        android:textColor="#ffffff"
        style="?android:attr/borderlessButtonStyle"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/emailView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="19dp"
        android:background="@null"
        android:padding="0dp"
        android:text="@string/email_address"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:visibility="gone"/>


</LinearLayout>
